#2 fixed type in README and added travis yml.

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # linearalgebra
 
 <!-- badges: start -->
+[![Travis build status](https://travis-ci.com/JamesFrech/linearalgebra.svg?branch=main)](https://travis-ci.com/JamesFrech/linearalgebra)
 <!-- badges: end -->
 
 The goal of linearalgebra is to provide various functions to perform tasks dealing with linear algebra.
@@ -26,7 +27,7 @@ Included are functions that can return the rref of a matrix, find the determinan
 You can install the released version of linearalgebra from github with:
 
 ``` r
-install_.packages_github("JamesFrech/linearalgebra")
+install_github("JamesFrech/linearalgebra")
 ```
 
 ## Usage
